assets/style.css
* {
    box-sizing: border-box;
}

#container {
    display: grid;
    /* height:2000px; */
   /*  grid-auto-rows: 80px 2000px 100px; */
    /* grid-template-rows: 80px 2000px 100px; */
    grid-template-rows: 160px 150vh 550px;
}

#container>div{
    background:rgb(66, 66, 66);
    border: 2px solid red;
}

#header{
	display:grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
	grid-row:1/2;
	
}


[class*="col-"]{
	background: rgb(115, 115, 116);
	border:1px solid black;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
}

[class*="col-"] h1 {
	grid-column: 3/6;
	grid-row: 3/5;
	border:1px solid blue;
	background: rgb(98, 99, 99);
}

h1	{
	margin: 0;
	font-family: 'Srisakdi', cursive;
	font-size: 30px;
}

p{
	margin: 0;
	font-family: 'Sniglet', cursive;
	font-size: 20px;
}

#main{
	display:grid;
	grid-template-columns: 1fr 1fr;
	grid-row: 2/3;
}

.square{

	background: lightgrey;
	border: 1px solid black;
	display: grid;
	grid-template-columns: 20px 1fr 1fr 1fr 20px;
	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
	text-align: center;
	
}

.square p{
	border:1px solid blue;
	grid-column: 2/5;
	grid-row: 3/5;
	font-size: 38px;
	
}

#footer{
	display:grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-row: 3/4;
}

#footer div{
	background:lightblue;
	border:1px solid black;
}

[class*="f-box-"] {
	display: grid;
	grid-template-rows: 2fr 1fr 1fr 1fr 1fr 1fr 1fr 2fr;
	grid-template-columns: 30px 1fr 1fr 1fr 30px;
	text-align: center;
}

[class*="f-box-"] h1 {
	border:1px solid brown;
	grid-row: 2/4;
	grid-column: 2/5;
	background: rgb(38, 131, 161);
	font-size: 45px;
	color: white;
	padding-top: 22px;
	
	
}

[class*="f-box-"] p{
	border: 1px solid black;
	grid-column: 2/5;
	grid-row: 5/8;
	background: lightcoral;
	padding-top: 18px;
	
		
}

#abs {
	width: 250px;
	position: absolute;
	top:100px;
	left: 41%;
}

#abs p{
	color: white;
}

